# MusicProject

./: .gitignore  Generate_MIDI_Files.bat  Generate_Suite_And_Stems.bat  README.md  generate_four_seasons_house.py  generate_midis.py  pyproject.toml  render_fluidsynth.py  requirements.txt
four_seasons_house/: __init__.py  automation.py  builder.py  cli.py  constants.py  midi_util.py  patterns.py  seasons.py  stem_export.py  suite.py  suite_notes.py  suite_seasons.py
